--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -3,3 +3,5 @@ uvicorn==0.27.1
 openai==1.78.0
 python-dotenv==1.0.1 
 git+https://github.com/ranaroussi/yfinance.git@main 
+pandas>=1.5   # data wrangling, date utilities
+numpy>=1.23
