--- a/app/client/package.json
+++ b/app/client/package.json
@@ -67,6 +67,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.176.0",
     "vaul": "^0.9.6",
     "vercel-ai": "^0.0.0",
     "zod": "^3.24.1"
@@ -76,6 +77,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-speech-recognition": "^3.9.6",
+    "@types/three": "^0.176.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
